@@ -1,6 +1,6 @@
 Package: phyloseq
-Version: 1.5.14
-Date: 2013-05-12
+Version: 1.5.15
+Date: 2013-05-13
 Title: Handling and analysis of high-throughput microbiome
     census data.
 Description: phyloseq provides a set of classes and tools
